third_party/rust_crates/forks/pin-init/tests/ui/compile-fail/init/shadowing_field.rs
use pin_init::*;

struct Foo {
    x: usize,
    y: usize,
}

fn main() {
    let x = 42;
    let _ = init!(Foo { x, y: x });
}
